--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,46 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:15
-    container_name: song_library_db
+  song-api:
+    image: song-api-image
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
+      SERVER_PORT: 4444
+      DB_HOST: database
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: 0000
+      DB_NAME: EffectiveMobile
+    ports:
+      - "4444:4444"
+    depends_on:
+      database:
+        condition: service_healthy
+    networks:
+      - app-network
+
+  database:
+    image: postgres:15-alpine
+    environment:
+      POSTGRES_DB: EffectiveMobile
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 0000
-      POSTGRES_DB: EffectiveMobile
+    command: [ "postgres", "-c", "listen_addresses=*" ]
     ports:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
-    networks:
-      - song-library-net
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres -d EffectiveMobile" ]
       interval: 10s
       retries: 5
+    networks:
+      - app-network
 
 volumes:
   db-data:
 
 networks:
-  song-library-net:
-    driver: bridge
+  app-network:
